# ray_tracer

./: .gitignore  Cargo.toml  README.md  config.toml  cornell.mtl
src/: builder.rs  camera.rs  io.rs  lib.rs  main.rs  types.rs  utils.rs  world.rs
src/io/: config.rs  mod.rs
src/world/: basic_container.rs  bvh.rs  container.rs  entities.rs  light.rs  mod.rs
