[package]
name = "ray_tracer"
version = "0.2.2"
authors = ["kiefer <eero.manty@gmail.com>"]
edition = "2021"

[dependencies]
image = "0.23"
nalgebra = "0.29"
rand = "*"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }

[profile.release.build-override]
opt-level = 3
codegen-units = 128
