[package]
name = "ray_tracer"
version = "0.2.2"
authors = ["kiefer <eero.manty@gmail.com>"]
edition = "2021"

[dependencies]
image = "0.24"
nalgebra = "0.32"
rand = {version="0.8", features=["small_rng"]}
toml = "0.7"
serde = { version = "1.0", features = ["derive"] }

[profile.release.build-override]
opt-level = 3
codegen-units = 128
